--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,20 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
     rel="stylesheet">
   <title>Techmedia</title>
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.techmediadigital.com/" />
+  <meta property="og:title" content="Techmedia" />
+  <meta property="og:description" content="Techmedia - Accelerate Growth with Innovative Solutions" />
+  <meta property="og:image" content="https://www.techmediadigital.com/logo.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://www.techmediadigital.com/" />
+  <meta property="twitter:title" content="Techmedia" />
+  <meta property="twitter:description" content="Techmedia - Accelerate Growth with Innovative Solutions" />
+  <meta property="twitter:image" content="https://www.techmediadigital.com/logo.png" />
 </head>
 
 <body>
