--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,14 +16,14 @@
   <meta property="og:url" content="https://www.techmediadigital.com/" />
   <meta property="og:title" content="Techmedia" />
   <meta property="og:description" content="Techmedia - Accelerate Growth with Innovative Solutions" />
-  <meta property="og:image" content="https://www.techmediadigital.com/logo.png" />
+  <meta property="og:image" content="https://www.techmediadigital.com/logo_url.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://www.techmediadigital.com/" />
   <meta property="twitter:title" content="Techmedia" />
   <meta property="twitter:description" content="Techmedia - Accelerate Growth with Innovative Solutions" />
-  <meta property="twitter:image" content="https://www.techmediadigital.com/logo.png" />
+  <meta property="twitter:image" content="https://www.techmediadigital.com/logo_url.png" />
 </head>
 
 <body>
