--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,14 +14,14 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.techmediadigital.com/" />
-  <meta property="og:title" content="Techmedia" />
+  <meta property="og:title" content="TECH MEDIA DIGITAL" />
   <meta property="og:description" content="Techmedia - Accelerate Growth with Innovative Solutions" />
   <meta property="og:image" content="https://www.techmediadigital.com/logo_url.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://www.techmediadigital.com/" />
-  <meta property="twitter:title" content="Techmedia" />
+  <meta property="twitter:title" content="TECH MEDIA DIGITAL" />
   <meta property="twitter:description" content="Techmedia - Accelerate Growth with Innovative Solutions" />
   <meta property="twitter:image" content="https://www.techmediadigital.com/logo_url.png" />
 </head>
