--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
     rel="stylesheet">
-  <title>TECH MEDIA DIGITAL</title>
+  <title>techmediadigital</title>
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
