--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,25 +5,138 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/png" href="/logo.png?v=2" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Primary Meta Tags -->
+  <title>TechMediaDigital - Digital Engineering & AI Solutions</title>
+  <meta name="title" content="TechMediaDigital - Digital Engineering & AI Solutions" />
+  <meta name="description"
+    content="Empowering enterprises with intelligent digital architectures, AI-driven insights, and future-proof software solutions. Offices in Chennai, Kerala, and Dubai." />
+  <meta name="keywords"
+    content="digital engineering, AI solutions, web development, mobile apps, SEO, digital marketing, CRM, ERP, custom software, data analytics, computer vision, Chennai, Kerala, Dubai" />
+  <meta name="author" content="TechMediaDigital" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
     rel="stylesheet">
-  <title>techmediadigital</title>
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.techmediadigital.com/" />
-  <meta property="og:title" content="TECH MEDIA DIGITAL" />
-  <meta property="og:description" content="Techmedia - Accelerate Growth with Innovative Solutions" />
-  <meta property="og:image" content="https://www.techmediadigital.com/logo_url.png" />
+  <meta property="og:title" content="TechMediaDigital - Digital Engineering & AI Solutions" />
+  <meta property="og:description"
+    content="Empowering enterprises with intelligent digital architectures, AI-driven insights, and future-proof software solutions." />
+  <meta property="og:image" content="https://www.techmediadigital.com/logo.png" />
+  <meta property="og:site_name" content="TechMediaDigital" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://www.techmediadigital.com/" />
-  <meta property="twitter:title" content="TECH MEDIA DIGITAL" />
-  <meta property="twitter:description" content="Techmedia - Accelerate Growth with Innovative Solutions" />
-  <meta property="twitter:image" content="https://www.techmediadigital.com/logo_url.png" />
+  <meta property="twitter:title" content="TechMediaDigital - Digital Engineering & AI Solutions" />
+  <meta property="twitter:description"
+    content="Empowering enterprises with intelligent digital architectures, AI-driven insights, and future-proof software solutions." />
+  <meta property="twitter:image" content="https://www.techmediadigital.com/logo.png" />
+
+  <!-- JSON-LD Schema Markup -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "TechMediaDigital",
+    "url": "https://www.techmediadigital.com",
+    "logo": "https://www.techmediadigital.com/logo.png",
+    "description": "Empowering enterprises with intelligent digital architectures, AI-driven insights, and future-proof software solutions.",
+    "email": "techmediadigital01@gmail.com",
+    "telephone": "+91 98472 72532",
+    "address": [
+      {
+        "@type": "PostalAddress",
+        "addressLocality": "Chennai",
+        "addressCountry": "IN"
+      },
+      {
+        "@type": "PostalAddress",
+        "addressLocality": "Kerala",
+        "addressCountry": "IN"
+      },
+      {
+        "@type": "PostalAddress",
+        "addressLocality": "Dubai",
+        "addressCountry": "AE"
+      }
+    ],
+    "sameAs": [
+      "https://www.linkedin.com/company/techmediadigital",
+      "https://twitter.com/techmediadigital",
+      "https://www.facebook.com/techmediadigital"
+    ],
+    "areaServed": ["IN", "AE", "Worldwide"],
+    "serviceType": [
+      "Digital Marketing",
+      "Software Development",
+      "AI & Data Solutions",
+      "Business Systems"
+    ]
+  }
+  </script>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ProfessionalService",
+    "name": "TechMediaDigital",
+    "image": "https://www.techmediadigital.com/logo.png",
+    "priceRange": "$$",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Chennai",
+      "addressCountry": "IN"
+    },
+    "telephone": "+91 98472 72532",
+    "email": "techmediadigital01@gmail.com",
+    "url": "https://www.techmediadigital.com",
+    "hasOfferCatalog": {
+      "@type": "OfferCatalog",
+      "name": "Digital Services",
+      "itemListElement": [
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "SEO Services",
+            "description": "Search Engine Optimization to improve online visibility"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Web & Mobile Development",
+            "description": "Custom web and mobile application development"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "AI Solutions",
+            "description": "Artificial Intelligence and Machine Learning solutions"
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Digital Marketing",
+            "description": "Comprehensive digital marketing strategies"
+          }
+        }
+      ]
+    }
+  }
+  </script>
 </head>
 
 <body>
